tests/fixtures/errors/e0406_reversed_slice.mimz
// expect: E0406
module M {
  in data: bits[8]
  out y: bits[4]
  y = data[0:3]
}
